# microeconomics

./: Cargo.toml  README.md
src/: main.rs  preference_list.rs
src/items/: discretes.rs  mod.rs
