[package]
name = "microeconomics"
version = "0.1.0"
authors = ["Christopher Dumas <christopherdumas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
rand = "*"
linefeed = "0.6"
colored = "1.9"